# quant_ans

./: .gitignore  pyproject.toml
research/: 250427_statistical_arbitrage.ipynb  250503_which_is_good.ipynb  250505_test-backtesting.ipynb
utils/: multiples.py  tickers.py
