[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtesting>=0.6.4",
    "bs4>=0.0.2",
    "bt>=1.1.2",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mysql-connector-python>=9.3.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "pip>=25.1.1",
    "plotly>=6.0.1",
    "qbstyles>=0.1.4",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "yfinance>=0.2.58",
]
